# emote

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  amoji.toml
src/: amoji.toml  defaults.toml  emote.rs  emote_map.rs  main.rs  util.rs
tests/: tests.rs
