[package]
name = "emote"
version = "0.1.0"
authors = ["Matt Friedman <matt@friedm.com>"]

[dependencies]
toml = "0.4"
clap = "2.31"
app_dirs = "1.2.1"
blake2 = "0.7"
digest = { version = "0.7", features = ["std"]}
time = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3"
log = "0.4"
stderrlog = "0.4"
regex = "1.0.0"
lazy_static = "1.0.1"
